fix universal build with google, map

--- a/src/assets/languages/en.json
+++ b/src/assets/languages/en.json
@@ -44,9 +44,9 @@
 	"mobile": "mobile",
 	"name": "name",
 	"navbar.addresses": "My addresses",
-	"navbar.area.configuration": "Area configuration",
+	"navbar.area.configuration": "Area",
 	"navbar.customers": "customers",
-	"navbar.drivers.configuration": "Drivers configuration",
+	"navbar.drivers.configuration": "Drivers",
 	"navbar.drivers.list": "List",
 	"navbar.drivers.top_view": "Top view",
 	"navbar.hubs": "hubs",
@@ -54,7 +54,7 @@
 	"navbar.run_sheet": "Run sheet",
 	"navbar.shelfs": "shelfs",
 	"navbar.shipment": "shipment",
-	"navbar.shipment_config_option": "Shipment configuration",
+	"navbar.shipment_config_option": "Shipment",
 	"payment_information": "payment_information",
 	"navbar.dashboard": "Dashboard",
 	"pickup_address": "pickup_address",
