add login, register and user list

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,11 +6,10 @@
 	"application_title": "Arch",
 	"arabic": "Arabic",
 	"arabic_name": "arabic_name",
-	"button.choose": "Choose",
-	"button.confirm": "Confirm",
-	"button.login": "Login",
-	"button_login": "button_login",
-	"button_signup": "button_signup",
+	"button_choose": "Choose",
+	"button_confirm": "Confirm",
+	"button_login": "Login",
+	"button_signup": "Register",
 	"car_size": "car_size",
 	"checkout_details": "checkout_details",
 	"city": "city",
@@ -43,27 +42,18 @@
 	"image": "image",
 	"mobile": "mobile",
 	"name": "name",
-	"navbar.addresses": "My addresses",
-	"navbar.area.configuration": "Area",
-	"navbar.customers": "customers",
-	"navbar.drivers.configuration": "Drivers",
-	"navbar.drivers.list": "List",
-	"navbar.drivers.top_view": "Top view",
-	"navbar.hubs": "hubs",
-	"navbar.reasons": "reasons",
-	"navbar.run_sheet": "Run sheet",
-	"navbar.shelfs": "shelfs",
-	"navbar.shipment": "shipment",
-	"navbar.shipment_config_option": "Shipment",
-	"payment_information": "payment_information",
 	"navbar.dashboard": "Dashboard",
+	"navbar_users": "Users",
+	"navbar_todos": "Todos",
+	"payment_information": "payment_information",
 	"pickup_address": "pickup_address",
-	"placeholder.confirm_password": "Confirm passord",
-	"placeholder.email": "Email",
-	"placeholder.fullname": "Fullname",
-	"placeholder.mobile": "Mobile",
-	"placeholder.password": "Password",
-	"placeholder.username": "Username",
+	"placeholder_confirm_password": "Confirm passord",
+	"placeholder_fullname": "Fullname",
+	"placeholder_email": "Email",
+	"placeholder_role": "Role",
+	"placeholder_mobile": "Mobile",
+	"placeholder_password": "Password",
+	"placeholder_username": "Username",
 	"placeholder_car_size": "placeholder_car_size",
 	"placeholder_cities": "placeholder_cities",
 	"placeholder_city": "City",
@@ -71,15 +61,10 @@
 	"placeholder_customer": "Placeholder_customer",
 	"placeholder_description": "Placeholder_description",
 	"placeholder_district": "placeholder_district",
-	"placeholder_email": "placeholder_email",
-	"placeholder_fullname": "placeholder_fullname",
 	"placeholder_hub": "placeholder_hub",
 	"placeholder_map_search": "placeholder_map_search",
-	"placeholder_mobile": "placeholder_mobile",
 	"placeholder_name": "placeholder_name",
 	"placeholder_passowrd": "placeholder_passowrd",
-	"placeholder_role": "placeholder_role",
-	"placeholder_username": "placeholder_username",
 	"portal.back_to_login": "Back to login",
 	"portal.forget_password_description": "Forget passwrod description",
 	"portal.forget_password_title": "Forget passwrod",
