close prompt on enter

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -15,7 +15,7 @@
 	"city": "city",
 	"close": "close",
 	"complete": "complete",
-	"confirm": "confirm",
+	"confirm": "Confirm",
 	"confirmition": "confirmition",
 	"country": "country",
 	"create_admin": "create_admin",
