--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,53 +1,35 @@
 {
 	"actions": "Actions",
 	"addresses_list": "Addresses",
-	"admin_list": "admin_list",
-	"application_name": "Admin",
-	"application_title": "Arch",
+	"admin_list": "Admins",
+	"application_title": "Buildozer",
 	"arabic": "Arabic",
-	"arabic_name": "arabic_name",
+	"arabic_name": "Name (Arabic)",
+	"english": "English",
+	"english_name": "Name (English)",
+	"fullname": "Fullname",
 	"button_choose": "Choose",
 	"button_confirm": "Confirm",
 	"button_login": "Login",
 	"button_signup": "Register",
-	"car_size": "car_size",
-	"checkout_details": "checkout_details",
-	"city": "city",
-	"close": "close",
-	"complete": "complete",
+	"city": "City",
+	"close": "Close",
+	"complete": "Complete",
 	"confirm": "Confirm",
-	"confirmition": "confirmition",
-	"country": "country",
-	"create_admin": "create_admin",
-	"create_city": "create_city",
-	"create_country": "create_country",
-	"create_customer": "create_customer",
-	"create_driver": "create_driver",
-	"create_hub": "create_hub",
-	"create_order_subtitle": "create_order_subtitle",
-	"create_order_title": "create_order_title",
-	"customer": "Customer",
-	"customer_list": "customer_list",
+	"confirmition": "Confirmition",
+	"country": "Country",
+	"create_admin": "Create admin",
 	"dashboard": "dashboard",
 	"description": "Description",
-	"distrect": "distrect",
-	"drivers_list": "drivers_list",
-	"email": "email",
-	"english": "English",
-	"english_name": "english_name",
-	"fullname": "fullname",
-	"hub": "hub",
-	"hubs_list": "hubs_list",
+	"email": "Email",
+	"name": "Name",
 	"id": "id",
-	"image": "image",
-	"mobile": "mobile",
-	"name": "name",
+	"image": "Image",
+	"mobile": "Mobile",
 	"navbar.dashboard": "Dashboard",
 	"navbar_users": "Users",
 	"navbar_sessions": "Sessions",
 	"navbar_media": "Media hub",
-	"payment_information": "payment_information",
-	"pickup_address": "pickup_address",
 	"placeholder_confirm_password": "Confirm passord",
 	"placeholder_fullname": "Fullname",
 	"placeholder_email": "Email",
@@ -55,43 +37,21 @@
 	"placeholder_mobile": "Mobile",
 	"placeholder_password": "Password",
 	"placeholder_username": "Username",
-	"placeholder_car_size": "placeholder_car_size",
-	"placeholder_cities": "placeholder_cities",
 	"placeholder_city": "City",
 	"placeholder_country": "Country",
-	"placeholder_customer": "Placeholder_customer",
-	"placeholder_description": "Placeholder_description",
-	"placeholder_district": "placeholder_district",
-	"placeholder_hub": "placeholder_hub",
-	"placeholder_map_search": "placeholder_map_search",
-	"placeholder_name": "placeholder_name",
-	"placeholder_passowrd": "placeholder_passowrd",
+	"placeholder_description": "Description",
+	"placeholder_map_search": "Search in google maps",
+	"placeholder_name": "Name",
+	"placeholder_passowrd": "Passowrd",
 	"portal.back_to_login": "Back to login",
 	"portal.forget_password_description": "Forget passwrod description",
 	"portal.forget_password_title": "Forget passwrod",
 	"portal.forget_passwrod": "Forget passwrod",
-	"portal.login_type.normal_client": "Normal client",
-	"portal.login_type.normal_client_description": "Allow to create bulk of shipments and monitoring your shipments",
-	"portal.login_type.special_client": "Ecommerce client",
-	"portal.login_type.special_client_description": "Allow to monitoring your shipments ",
-	"portal.login_type.subtitle": "You have Free Unlimited Updates and Premium Support on each package.",
-	"portal.login_type.title": "Pick the best plan for you",
-	"portal.pin_verification.code_not_received": "Code not recived ? send it again!",
-	"portal.pin_verification.send_again": "Send again",
-	"portal.pin_verification.title": "Verify your self",
-	"recipient_details": "recipient_details",
-	"register_button": "register_button",
 	"request_is_proccessing": "request_is_proccessing",
-	"role": "role",
-	"save_button": "save_button",
-	"shipment_details": "shipment_details",
+	"role": "Role",
+	"save_button": "Save",
 	"success_promo": "success_promo",
 	"success_title": "success_title",
-	"update_address": "Update address",
-	"update_admin": "update_admin",
-	"update_customer": "update_customer",
-	"update_driver": "update_driver",
-	"update_hub": "update_hub",
-	"update_password": "update_password",
-	"username": "username"
+	"update_password": "Update password",
+	"username": "Username"
 }
