added forgot password component

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -53,5 +53,6 @@
 	"success_promo": "success_promo",
 	"success_title": "success_title",
 	"update_password": "Update password",
+	"forgot_password": "Forgot password",
 	"username": "Username"
 }
