added forgot password form

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -33,6 +33,9 @@
 	"navbar_home": "navbar_home",
 	"placeholder_confirm_password": "Confirm passord",
 	"placeholder_fullname": "Fullname",
+	"placeholder_lastname": "Last name",
+	"placeholder_firstname": "First name",
+	"placeholder_place_of_birth": "Place of birth",
 	"placeholder_email": "Email",
 	"placeholder_role": "Role",
 	"placeholder_mobile": "Mobile",
