feat: add setup script to prepare the codebase for new project

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,8 +1,8 @@
 {
+	"application_name": "Angular Buildozer",
 	"actions": "Actions",
 	"addresses_list": "Addresses",
 	"admin_list": "Admins",
-	"application_title": "Buildozer",
 	"arabic": "Arabic",
 	"arabic_name": "Name (Arabic)",
 	"english": "English",
