--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -30,7 +30,7 @@
 	"navbar_users": "Users",
 	"navbar_sessions": "Sessions",
 	"navbar_media": "Media hub",
-	"navbar_home": "navbar_home",
+	"navbar_home": "Home",
 	"placeholder_confirm_password": "Confirm passord",
 	"placeholder_fullname": "Fullname",
 	"placeholder_lastname": "Last name",
