refactor(ChatModel): remove IGroup interface and replace it with Room type

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,5 @@
 {
-	"application_name": "Angular Buildozer",
+	"application_name": "Buildozer",
 	"actions": "Actions",
 	"addresses_list": "Addresses",
 	"admin_list": "Admins",
