chore: clean up unnesscary files

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,62 +1,1 @@
-{
-	"application_name": "Buildozer",
-	"actions": "Actions",
-	"addresses_list": "Addresses",
-	"admin_list": "Admins",
-	"arabic": "Arabic",
-	"arabic_name": "Name (Arabic)",
-	"english": "English",
-	"english_name": "Name (English)",
-	"fullname": "Fullname",
-	"button_choose": "Choose",
-	"button_confirm": "Confirm",
-	"button_login": "Login",
-	"button_signup": "Register",
-	"city": "City",
-	"close": "Close",
-	"complete": "Complete",
-	"confirm": "Confirm",
-	"confirmition": "Confirmition",
-	"country": "Country",
-	"create_admin": "Create admin",
-	"dashboard": "dashboard",
-	"description": "Description",
-	"email": "Email",
-	"name": "Name",
-	"id": "id",
-	"image": "Image",
-	"mobile": "Mobile",
-	"navbar.dashboard": "Dashboard",
-	"navbar_users": "Users",
-	"navbar_sessions": "Sessions",
-	"navbar_media": "Media hub",
-	"navbar_home": "Home",
-	"placeholder_confirm_password": "Confirm passord",
-	"placeholder_fullname": "Fullname",
-	"placeholder_lastname": "Last name",
-	"placeholder_firstname": "First name",
-	"placeholder_place_of_birth": "Place of birth",
-	"placeholder_email": "Email",
-	"placeholder_role": "Role",
-	"placeholder_mobile": "Mobile",
-	"placeholder_password": "Password",
-	"placeholder_username": "Username",
-	"placeholder_city": "City",
-	"placeholder_country": "Country",
-	"placeholder_description": "Description",
-	"placeholder_map_search": "Search in google maps",
-	"placeholder_name": "Name",
-	"placeholder_passowrd": "Passowrd",
-	"portal.back_to_login": "Back to login",
-	"portal.forget_password_description": "Forget passwrod description",
-	"portal.forget_password_title": "Forget passwrod",
-	"portal.forget_passwrod": "Forget passwrod",
-	"request_is_proccessing": "request_is_proccessing",
-	"role": "Role",
-	"save_button": "Save",
-	"success_promo": "success_promo",
-	"success_title": "success_title",
-	"update_password": "Update password",
-	"forgot_password": "Forgot password",
-	"username": "Username"
-}
+{"application_name":"Messenger"}
